--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -156,7 +156,7 @@
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "data = Path('../Resources/lending_data.csv')\n",
+    "data = Path('Resources/lending_data.csv')\n",
     "lending_data_df = pd.read_csv(data)\n",
     "\n",
     "# Review the DataFrame\n",
@@ -617,15 +617,13 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model is highly accurate overall.\r\n",
-    "The balanced accuracy score is 0.925. The balanced accuracy is defined as the average of recall obtained on each class. As the best value is 1, it shows that the model is highly accurate.\n",
+    "**Answer:** The logistic regression model is highly accurate overall. The balanced accuracy score is 0.952.\n",
     "\n",
-    "According to the classification report, the classification model achieves high performane2. It shows excellent precisio and, recal  for both healthy and high-risk loans. The model can distinguish between the Healthy loans and High-risk loans accurately, with minimal misclassification.\n",
+    "The balanced accuracy is defined as the average of recall obtained on each class. As the best value is 1, it shows that the model is highly accurate.\n",
     "\n",
-    "The values of precisio and, recale are slightly lower when it comes to High-risk loans when compared to predicting Healthy loans.\n",
-    "oans.\r\n",
-    "\r\n",
-    "Overall, the model exhibits strong predictive capabilities.\r\n"
+    "According to the classification report, the classification model achieves high performance. It shows excellent precision and recall for both healthy and high-risk loans. The model can distinguish between the Healthy loans and High-risk loans accurately, with minimal misclassification.\n",
+    "\n",
+    "The values of precision and recall are slightly lower when it comes to High-risk loans when compared to predicting Healthy loans.\r\n"
    ]
   },
   {
@@ -808,9 +806,9 @@
     "\n",
     "**Answer:** The model performs slightly better when using the resampled data.\n",
     "\n",
-    "For Healthy loan, though there is less training data, the precision and recall do not suffer a lot. This is because the amount of training data, though reduced, is still sufficient to train an accurate model.\n",
+    "For Healthy loans, though there is less training data, the precision and recall do not suffer a lot. This is because the amount of training data, though reduced, is still sufficient to train an accurate model.\n",
     "\n",
-    "With more training data for High-risk loan, we can see improvements in the prediction results.\n",
+    "For High-risk loans, with more training data, we can see improvements in the prediction results.\n",
     "\n",
     "Overall balanced accuracy score of the prediction is improved from 0.952 to 0.994. The accuracy of the model using original data is already high, and any improvement does not seem to be significant due to diminishing returns. However, in real-world application, this improvement is important. It is because from the perspective of creditors, they develop a risk classification model mainly to predict High-risk loans instead of healthy ones. With better prediction of High-risk loans, creditors can reduce potential risks in future lending activities."
    ]
