--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Read the `lending_data.csv` data from the `Resources` folder into a Pandas DataFrame."
+    "### Step 1: Read the `lending_data.csv` data from the `resources` folder into a Pandas DataFrame."
    ]
   },
   {
@@ -155,8 +155,8 @@
     }
    ],
    "source": [
-    "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "data = Path('Resources/lending_data.csv')\n",
+    "# Read the CSV file from the resources folder into a Pandas DataFrame\n",
+    "data = Path('resources/lending_data.csv')\n",
     "lending_data_df = pd.read_csv(data)\n",
     "\n",
     "# Review the DataFrame\n",
